objects/Activity.object
<CustomObject>
    <fields>
        <fullName>CalendarUrl__c</fullName>
        <formula>&apos;https://calendar.google.com/calendar/embed?src=&apos;+IF( ISPICKVAL(Resources__c,&apos;Elevator 1&apos;), &apos;stratus360labs.com_2d3830303333303932323732@resource.calendar.google.com&apos;, &apos;stratus360labs.com_3835383637303831333330@resource.calendar.google.com&apos;)+&apos;&amp;ctz=&apos;+ TEXT(timezone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CalendarUrl</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurrence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurrence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resources__c</fullName>
        <label>Resources</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Elevator 1</fullName>
                </value>
                <value>
                    <fullName>Elevator 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>endTime__c</fullName>
        <defaultValue>NOW()+1</defaultValue>
        <label>endTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>startTime__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>startTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>timezone__c</fullName>
        <label>timezone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>America/Toronto</fullName>
                </value>
                <value>
                    <fullName>America/Vancouver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>